--- a/index.html
+++ b/index.html
@@ -7,10 +7,6 @@
 </head>
 <body>
    <h1>Exercício 01 em PHP!!!</h1>
-   <!-- A partir daqui será o código PHP -->
-   <?php
-
-
-    ?>
+    <p><a href="Ex_02.php">Clique aqui para ver o exercício</a></p>
 </body>
 </html>
